--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Listing sources</h1>
+<h2> total <%= @sources.count %> </h2>
 
 <table>
   <tr>
@@ -10,7 +11,7 @@
 
 <% @sources.each do |source| %>
   <tr>
-    <td><%= source.info %></td>
+    <td><%= raw source.info %></td>
     <td><%= link_to 'Show', source %></td>
     <td><%= link_to 'Edit', edit_source_path(source) %></td>
     <td><%= link_to 'Destroy', source, :confirm => 'Are you sure?', :method => :delete %></td>
