integration test and proper routes/helpers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,10 @@
 
 <hr>
 
-<!-- FIXME: put to routes -->
 <footer>
-  <%= link_to "Home", "home" %>
-  <%= link_to "Contact", "contact" %>
-  <%= link_to "About", "about" %>
+  <%= link_to "Home", root_path %>
+  <%= link_to "Contact", contact_path %>
+  <%= link_to "About", about_path %>
 </footer>
 
 </body>
