--- a/app/views/parts/_form.html.erb
+++ b/app/views/parts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@part) do |f| %>
+<%= simple_form_for(@part) do |f| %>
   <% if @part.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@part.errors.count, "error") %> prohibited this part from being saved:</h2>
@@ -11,6 +11,7 @@
     </div>
   <% end %>
 
+  <%= f.association :tags %>
   <div class="field">
     <%= f.label :content %><br />
     <%= f.text_area :content %>
