use model methods for source representation

--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -11,7 +11,7 @@
 
 <% @sources.each do |source| %>
   <tr>
-    <td><%= raw source.info %></td>
+    <td><%= source.headline %></td>
     <td><%= link_to 'Show', source %></td>
     <td><%= link_to 'Edit', edit_source_path(source) %></td>
     <td><%= link_to 'Destroy', source, :confirm => 'Are you sure?', :method => :delete %></td>
