--- a/app/views/parts/show.html.erb
+++ b/app/views/parts/show.html.erb
@@ -1,12 +1,16 @@
 <p>
   <b>Content:</b>
+  <div>
   <%= raw @part.content %>
+  </div>
 </p>
 
 <p>
   <b>Source:</b>
+  <div>
   <!-- FIXME: this does not look good: access to the model from template directly -->
   <%= raw @part.source.info %>
+  </div>
 </p>
 
 
