--- a/app/views/sources/index.html.erb
+++ b/app/views/sources/index.html.erb
@@ -1,13 +1,9 @@
 <h1>Listing sources</h1>
 <h2> total <%= @sources.count %> </h2>
 
+<%= link_to 'Upload source', upload_parts_path %>
+
 <table>
-  <tr>
-    <th>Info</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
 
 <% @sources.each do |source| %>
   <tr>
@@ -20,5 +16,3 @@
 </table>
 
 <br />
-
-<%= link_to 'New Source', new_source_path %>
