--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Home</h1>
+
+<p>
+The application is made for analisys of html files produced by corpus
+search.  When the source html file is uploaded, it is split up into
+parts (examples) and a tag is created from the search word.  The tag
+can be edited or more tags can be created, and then assigned to the
+parts.
+</p>
+
+<p>
+More details on the implementation can be found at <%= link_to "About", about_path %> page.
+</p>
+
