--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -7,6 +7,12 @@
       <%= raw part.headline %>
     </div>
     <div>
+      Tags:
+      <% part.tags.each do |tag| %>
+      <i><%= tag.word %></i>
+      <% end %>
+    </div>
+    <div>
     <%= link_to 'Show', part %>
     <%= link_to 'Edit', edit_part_path(part) %>
     <%= link_to 'Destroy', part, :confirm => 'Are you sure?', :method => :delete %>
