fix some typos and add a bit to about

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <h1>Home</h1>
 
 <p>
-The application is made for analisys of html files produced by corpus
+The application is made for analysis of html files produced by corpus
 search.  When the source html file is uploaded, it is split up into
 parts (examples) and a tag is created from the search word.  The tag
 can be edited or more tags can be created, and then assigned to the
