--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,13 +4,20 @@
 The minimal tag length is two letters, please do not use shorter words
 to search the corpus.  The search word becomes the first tag for all
 the parts from the uploaded source.  All the tags are unique, new tag
-is not created if the same word exists in the databese.  In the case
+is not created if the same word exists in the database.  In the case
 of complicated search queries, the first word of the query is taken as
 the first tag.  Therefore it is reasonable to put a full form of the
 search term at the beginning of the query, although it is not required
 since the tag can be renamed. There is a possible pitfall: tags are
 not checked for similarity, therefore tag <i>reden</i> is allowed even
-if word <i>rede</i> is already in the database.
+if word <i>rede</i> is already in the database.  The tags are sorted
+alphabetically, it should be easy to track such kind of similarity.
+</p>
+
+<p>
+When a source is destroyed, all the parts from that source are deleted
+as well.  On the other hand, the tags are kept even when all the
+related parts and sources are destroyed.
 </p>
 
 <h2>TODO</h2>
