add note to part

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -20,8 +20,13 @@ as well.  On the other hand, the tags are kept even when all the
 related parts and sources are destroyed.
 </p>
 
+<p>
+A note can be attached to the parts, for example it can explain why
+tags were assigned to the part.
+</p>
+
 <h2>TODO</h2>
 
 <ul>
-  <li>a text field for notes in part model</li>
+  <li><s>a text field for notes in part model</s></li>
 </ul>
