--- a/app/views/parts/show.html.erb
+++ b/app/views/parts/show.html.erb
@@ -12,6 +12,13 @@
   <% end %>
 </div>
 
+</div>
+  <% if @part.note %>
+  <b>Note:</b>
+  <%= @part.note %>
+  <% end %>
+</div>
+
 <p>
   <b>Source:</b>
   <div>
