--- a/app/views/parts/_form.html.erb
+++ b/app/views/parts/_form.html.erb
@@ -21,6 +21,12 @@
     <%= f.label :tags %><br />
     <%= f.association :tags, :label => false %>
   </div>
+
+  <div class="field">
+    <%= f.label :note %><br />
+    <%= f.text_area :note, :size => "40x5" %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
