fix bug with non-nil empty note (check for blank)

--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -11,7 +11,7 @@
       <% part.tags.each do |tag| %>
       <i><%= tag.word %></i>
       <% end %>
-      <% if part.note %>
+      <% if ! part.note.blank? %>
       (with note)
       <% end %>
     </div>
