comma-separated tags in part views

--- a/app/views/parts/show.html.erb
+++ b/app/views/parts/show.html.erb
@@ -7,9 +7,7 @@
 
 <div>
   Tags:
-  <% @part.tags.each do |tag| %>
-  <i><%= tag.word %></i>
-  <% end %>
+  <i><%= @part.tags.map {|t| t.word}.join(", ") %></i>
 </div>
 
 </div>
