--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -8,9 +8,7 @@
     </div>
     <div>
       Tags:
-      <% part.tags.each do |tag| %>
-      <i><%= tag.word %></i>
-      <% end %>
+      <i><%= part.tags.map {|t| t.word}.join(", ") %></i>
       <% if ! part.note.blank? %>
       (with note)
       <% end %>
