--- a/app/views/sources/show.html.erb
+++ b/app/views/sources/show.html.erb
@@ -1,9 +1,9 @@
-<p>
+<div>
   <b>Info:</b>
   <div>
   <%= raw @source.info %>
   </div>
-</p>
+</div>
 
 
 <%= link_to 'Edit', edit_source_path(@source) %> |
