make nested routes work for sources

--- a/app/views/sources/show.html.erb
+++ b/app/views/sources/show.html.erb
@@ -5,6 +5,6 @@
   </div>
 </div>
 
-
+<%= link_to 'Show parts', source_parts_path(@source) %> |
 <%= link_to 'Edit', edit_source_path(@source) %> |
 <%= link_to 'Back', sources_path %>
