--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -1,6 +1,14 @@
 <h1>Listing parts</h1>
 <h2> total <%= @parts.total_count %> </h2>
 
+<%= form_tag(search_path) do %>
+  <% for tag in Tag.all %>
+     <%= check_box_tag "tag_id[]", tag.id, @tag_ids.include?(tag.id)%>
+     <%= tag.word %>
+  <% end %>
+  <%= submit_tag("Select") %>
+<% end %>
+
 <%= paginate @parts %>
 
 <% @parts.each do |part| %>
