--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -11,7 +11,7 @@
 
 <% @tags.each do |tag| %>
   <tr>
-    <td><%= link_to tag.word, tag_parts_path(tag) %></td>
+    <td><%= render tag %></td>
     <td><%= link_to 'Show', tag %></td>
     <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
     <td><%= link_to 'Destroy', tag, :confirm => 'Are you sure?', :method => :delete %></td>
