redirect to index after edit, persistent tag set
persistent tag set is saved in session variable and used when no tags
are submitted. the code can be confused by empty set through "Select"
and plain index action.

--- a/app/views/parts/index.html.erb
+++ b/app/views/parts/index.html.erb
@@ -3,7 +3,7 @@
 
 <%= form_tag(search_path) do %>
   <% for tag in Tag.all %>
-     <%= check_box_tag "tag_id[]", tag.id, @tag_ids.include?(tag.id)%>
+     <%= check_box_tag "tag_id[]", tag.id, @checked.include?(tag.id.to_s)%>
      <%= tag.word %>
   <% end %>
   <%= submit_tag("Select") %>
