--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :word %><br />
     <%= f.text_field :word %>
   </div>
+  <div class="field">
+    <%= f.label :categories %><br />
+    <%= f.select(:category_id, Category.all.collect {|p| [ p.name, p.id ] }, {:include_blank => 'None'}) %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
