add one more TODO to about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -50,4 +50,5 @@ listing.  The tag set is kept persistent until explicitly changed with
   <li>categories for tags</li>
   <li>saving tag sets for re-use in the future</li>
   <li>different experiments, possibly by assigning a tag during source upload</li>
+  <li>show set of parts with all context for selected tag set</li>
 </ul>
